[package]
name = "avtomet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.18", features=["gzip"]}
scraper = "0.16.0"
select = "0.6.0"
urlencoding = "2.1.2"
tokio = { version="1.28.2", features=["full"]}
serde = "1.0.163"
mail-send = "0.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mongodb = "2.5.0"
futures = "0.3"